@@ -854,4 +854,6 @@
 {TERRAIN_ADJACENT          -560    Chw              (!,Chw,Chr)                          water/coast}
 {TERRAIN_ADJACENT          -570    (!,Chr,Chw)      Chr                                  flat/grass}
 
+{TERRAIN_BASE       _off^*                 off-map/alpha}
+
 {TERRAIN_BASE_DEFAULT void}
