@@ -25,6 +25,9 @@ Version 1.3.3+svn:
      an image of a new scenario immediately before entering it, is now only
      presented if the game was built with TINY_GUI.  Non-tiny systems do this
      automatically without asking.
+   * Added a new experimental background, this is under evaluation but causes
+     a rather severe performance penalty especially while scrolling. This will
+     be fixed once the decission of the final version has been made.
 
   * Unit changes and balancing
 
